# crawler

./: .env  .gitignore  Cargo.toml
crawler-application/: Cargo.toml
crawler-application/src/: lib.rs  openapi.rs
crawler-application/src/config/: AppConfig.rs  DatabaseConfig.rs  mod.rs
crawler-application/src/exception/: GlobalExceptionHandler.rs  mod.rs
crawler-application/src/rest/: mod.rs
crawler-application/src/rest/controller/: DownloadController.rs  UserController.rs  mod.rs
crawler-application/src/rest/payload/: CreateUserPayload.rs  DownloadVideoPayload.rs  UpdateUserPayload.rs  mod.rs
crawler-application/src/rest/response/: ApiResponse.rs  mod.rs
crawler-application/src/rest/router/: DownloadRouter.rs  UserRouter.rs  mod.rs
crawler-application/src/state/: AppState.rs  mod.rs
crawler-container/: Cargo.toml
crawler-container/src/: main.rs
crawler-dataaccess/: Cargo.toml
crawler-dataaccess/src/: lib.rs
crawler-dataaccess/src/base/: BaseEntity.rs  mod.rs
crawler-dataaccess/src/download/: mod.rs
crawler-dataaccess/src/download/adapter/: DownloadRepositoryImpl.rs  mod.rs
crawler-dataaccess/src/download/entity/: DownloadEntity.rs  mod.rs
crawler-dataaccess/src/download/mapper/: DownloadDataMapper.rs  mod.rs
crawler-dataaccess/src/user/: mod.rs
crawler-domain/: Cargo.toml
crawler-domain/src/: lib.rs
crawler-domain/src/dto/: CreateUserCommand.rs  DownloadVideoCommand.rs  DownloadVideoResponse.rs  UpdateUserCommand.rs  User.rs  UserResponse.rs  VideoDownload.rs  VideoDownloadResponse.rs  mod.rs
crawler-domain/src/enum/: DomainError.rs  mod.rs
crawler-domain/src/mapper/: CrawlerDataMapper.rs  mod.rs
crawler-domain/src/port/: mod.rs
crawler-domain/src/service/: DownloadService.rs  UserService.rs  YtDlpDownloaderService.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_downloads_table.rs  m20240101_000002_create_users_table.rs  m20240101_000003_add_audit_columns.rs  main.rs
(+17 files in other folders)
