[package]
name = "crawler-application"
version = "0.1.0"
edition = "2021"

[dependencies]
crawler-domain = { path = "../crawler-domain" }
crawler-dataaccess = { path = "../crawler-dataaccess" }

serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
